--- a/InfiniteMatrixComplete/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/InfiniteMatrixComplete/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -178,7 +178,7 @@ Advanced=False
 LastLevel=/Game/InfiniteMatrix/Maps/TutorialMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
